0.45 10aug18
* new model with humidity Nexus Temperature/Humidity. thanks to user gazza (gary)!
* fix typo swap channel and hardware_id in Acurite 986 json parse

0.44 21jul18
* output from rtl_433 continues to be a moving target

0.43 21jul18
* fix battery status for acurite tower packets
* fix battery status for acurite lightning packets

0.42 06jul18
* fix units for FOWH1080Packet - m/s and mm not kph and cm.  thanks millallo!

0.41 06jul18
* added support for acurite 986 json format
* try to make some acurite packet identifiers more robust

0.40 06jul18
* deal with acurite 5in1 changes in rtl_433.  thanks to user andylittle!
* deal with acurite lightning sensor changes in rtl_433.  thanks to mlfreeman2!
* added support for Nexus temperature sensor.  thanks to user vg8020!

0.39 01jan17
* deal with change from wind_speed to wind_speed_mph for rtl433 parsing of 5in1

0.38 10dec17
* hardware_name is a property

0.37 01nov17
* deal with more changes to field names from rtl_433 for wh1080/wh3080

0.36 18sep17
* do not use id as a packet dictionary key

0.35 15sep17
* fix sensor id for acurite WT450

0.34 15sep17
* added support for acurite WT450 rain sensor

0.33 09aug17
* fix bogus whitespace from kk6fut pull request

0.32 04aug17
* deal with fine offset wh3080 output from different rtl_433 versions

0.31 03aug2017
* added support for THN802 and BTHGN129.  thanks to dartvader85!

0.30 20jul2017
* added support for lacrosse tx sensor.  thanks to kk6fut!

0.29 17may2017
* fixed non-ascii character in the comments

0.28 16may2017
* added support for fine offset wh3080 packets

0.27 11apr2017
* added support for oregon scientific BTHR968.  thanks to Art Greenberg!

0.26 02apr2017
* added support for fine offset wh25 packets.  thanks to John Voss!

0.25 20mar2017
* added support for acurite 606TX sensors.  thanks to Karl Kremer!

0.24 19mar2017
* deal with rtl_433 changes to acurite lightning sensor
* added support for prologue sensors.  thanks to user Karl Kremer!
