@@ -1,6 +1,7 @@
 0.45 10aug18
 * new model with humidity Nexus Temperature/Humidity. thanks to user gazza (gary)!
-* fix typo swap channel and hardware_id in Acurite 986 json parse
+* fix typo swap channel and hardware_id in Acurite 986 json parse.
+* add json parser wind wgr800 and rain pcr800. thanks to user linda eriksson! 
 
 0.44 21jul18
 * output from rtl_433 continues to be a moving target
